--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         alt="Destacado 1: Twist Capsule">
                 </div>
                 <div class="window-footer">
-                    <span class="filename-text">IMG_0894.jpg</span>
+                    <span class="filename-text">IMG_0894.jpg *PDPAOLA*</span>
                     <span class="dimensions-text" id="dims-1"></span>
                 </div>
                 <div class="resize-handle"></div>
@@ -105,7 +105,7 @@
                 <div class="window-header"></div>
                 <div class="window-body">
                     <img id="img-2"
-                        src="https://d2w9rnfcy7mm78.cloudfront.net/41341670/original_3eee4e2ddb63d9dba927dec98897c655.jpg?1763995995?bc=0"
+                        src="https://d2w9rnfcy7mm78.cloudfront.net/41350845/original_dfe9b4b5463b0a58dc5ca7042b498f26.jpg?1764014959?bc=0"
                         alt="Cisne_earring.jpg *RIGIDO*">
                 </div>
                 <div class="window-footer">
@@ -137,7 +137,7 @@
                         alt="Placeholder 4">
                 </div>
                 <div class="window-footer">
-                    <span class="filename-text">twistcapsule-3.png</span>
+                    <span class="filename-text">Icons-Collection_Product-Identity.png *PDPAOLA*</span>
                     <span class="dimensions-text" id="dims-4"></span>
                 </div>
                 <div class="resize-handle"></div>
@@ -151,7 +151,7 @@
                         alt="Placeholder 5">
                 </div>
                 <div class="window-footer">
-                    <span class="filename-text">twistcapsule-2.png</span>
+                    <span class="filename-text">Silhouettes-Collection.png *PDPAOLA*</span>
                     <span class="dimensions-text" id="dims-5"></span>
                 </div>
                 <div class="resize-handle"></div>
