--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         alt="Destacado 1: Twist Capsule">
                 </div>
                 <div class="window-footer">
-                    <span class="filename-text">IMG_0894.jpg *PDPAOLA*</span>
+                    <span class="filename-text">TWIST_Capsule.jpg *PDPAOLA*</span>
                     <span class="dimensions-text" id="dims-1"></span>
                 </div>
                 <div class="resize-handle"></div>
