--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         alt="Destacado 1: Twist Capsule">
                 </div>
                 <div class="window-footer">
-                    <span class="filename-text">TWIST_Capsule.jpg *PDPAOLA*</span>
+                    <span class="filename-text">PDPAOLA Twite collection.png</span>
                     <span class="dimensions-text" id="dims-1"></span>
                 </div>
                 <div class="resize-handle"></div>
@@ -109,7 +109,7 @@
                         alt="Cisne_earring.jpg *RIGIDO*">
                 </div>
                 <div class="window-footer">
-                    <span class="filename-text">Cisne_earring.jpg *RIGIDO*</span>
+                    <span class="filename-text">PDPAOLA Aqua collection.png</span>
                     <span class="dimensions-text" id="dims-2"></span>
                 </div>
                 <div class="resize-handle"></div>
@@ -123,7 +123,7 @@
                         alt="Lazo_earring.jpg *RIGIDO*">
                 </div>
                 <div class="window-footer">
-                    <span class="filename-text">Lazo_earring.jpg *RIGIDO*</span>
+                    <span class="filename-text">RIGIDO JEWELRY Lazo earring.png</span>
                     <span class="dimensions-text" id="dims-3"></span>
                 </div>
                 <div class="resize-handle"></div>
@@ -137,7 +137,7 @@
                         alt="Placeholder 4">
                 </div>
                 <div class="window-footer">
-                    <span class="filename-text">Icons-Collection_Product-Identity.png *PDPAOLA*</span>
+                    <span class="filename-text">PDPAOLA x ZE GARCÍA Fine Jewelry capsule.png</span>
                     <span class="dimensions-text" id="dims-4"></span>
                 </div>
                 <div class="resize-handle"></div>
@@ -151,7 +151,7 @@
                         alt="Placeholder 5">
                 </div>
                 <div class="window-footer">
-                    <span class="filename-text">Silhouettes-Collection.png *PDPAOLA*</span>
+                    <span class="filename-text">PDPAOLA x SCALPERS collection.png</span>
                     <span class="dimensions-text" id="dims-5"></span>
                 </div>
                 <div class="resize-handle"></div>
