--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         alt="Destacado 1: Twist Capsule">
                 </div>
                 <div class="window-footer">
-                    <span class="filename-text">PDPAOLA Twite collection.png</span>
+                    <span class="filename-text">PDPAOLA Twist collection.png</span>
                     <span class="dimensions-text" id="dims-1"></span>
                 </div>
                 <div class="resize-handle"></div>
@@ -105,7 +105,7 @@
                 <div class="window-header"></div>
                 <div class="window-body">
                     <img id="img-2"
-                        src="https://d2w9rnfcy7mm78.cloudfront.net/41350845/original_dfe9b4b5463b0a58dc5ca7042b498f26.jpg?1764014959?bc=0"
+                        src="https://d2w9rnfcy7mm78.cloudfront.net/41486070/original_c09eabaecadc85a353e61115e1c6faa6.png?1764592713?bc=0"
                         alt="Cisne_earring.jpg *RIGIDO*">
                 </div>
                 <div class="window-footer">
@@ -133,7 +133,7 @@
                 <div class="window-header"></div>
                 <div class="window-body">
                     <img id="img-4"
-                        src="https://d2w9rnfcy7mm78.cloudfront.net/41008340/original_f09bba8bf0d0c4a387ebd2a1037c6a09.png"
+                        src="https://d2w9rnfcy7mm78.cloudfront.net/41486130/original_921965981dec1422e10fbd0a320d7b25.png?1764592970?bc=0"
                         alt="Placeholder 4">
                 </div>
                 <div class="window-footer">
