--- a/index.html
+++ b/index.html
@@ -165,6 +165,6 @@
      <div class="watermark"> 
                 <i style="color:gray">Website designed by my sister <a href="https://martamatroska.github.io/" style="color: gray" target="_blank">@marta.mkv</a></i>
              </div>
-    <script src="script.js"></script>
+    <script src="scriptt.js"></script>
 </body>
 </html>
