--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <div class="window-body">
                     <img id="img-2"
                         src="https://d2w9rnfcy7mm78.cloudfront.net/41486070/original_c09eabaecadc85a353e61115e1c6faa6.png?1764592713?bc=0"
-                        alt="Cisne_earring.jpg *RIGIDO*">
+                        alt="Ci*">
                 </div>
                 <div class="window-footer">
                     <span class="filename-text">PDPAOLA Aqua collection.png</span>
@@ -147,7 +147,7 @@
                 <div class="window-header"></div>
                 <div class="window-body">
                     <img id="img-5"
-                        src="https://d2w9rnfcy7mm78.cloudfront.net/41008348/original_6bb10a690c5a8dc9bf8e60f533634292.png"
+                        src="https://d2w9rnfcy7mm78.cloudfront.net/41527671/original_27d190ed696dcbcb8d558041132e7788.jpg?1764714944?bc=0"
                         alt="Placeholder 5">
                 </div>
                 <div class="window-footer">
@@ -165,6 +165,6 @@
      <div class="watermark"> 
                 <i style="color:gray">Website designed by my sister <a href="https://martamatroska.github.io/" style="color: gray" target="_blank">@marta.mkv</a></i>
              </div>
-    <script src="scriptt.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
