--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.6">
 
-    <title>𝒜𝓃𝑔ℯ𝓁𝒶</title>
+    <title>Ángela's website</title>
 
     <link rel="icon" href="assets/Iconfactory-Copland-5-A-rose-for-K..32.png">
     <link rel="stylesheet" type="text/css" href="style.css"> 
