--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <title>Ángela's website</title>
 
-    <link rel="icon" href="assets/Iconfactory-Copland-5-A-rose-for-K..32.png">
+    <link rel="icon" href="assets/Yusuke-Kamiyamane-Fugue-Pearl.16.png">
     <link rel="stylesheet" type="text/css" href="style.css"> 
 
 </head>
