--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
     </main>
 
      <div class="watermark"> 
-                <i style="color:gray">Website designed by my sister <a href="https://martamatroska.github.io/" style="color: gray" target="_blank">@marta.mkv</a></i>
+                <i style="color:gray">Website designed by <a href="https://martamatroska.github.io/" style="color: gray" target="_blank">@marta.mkv</a></i>
              </div>
     <script src="script.js"></script>
 </body>
